@@ -1,3 +1,5 @@
+2013-04-15: Add work-around for python2.6 version of GzipFile.
+
 2013-04-15: Add option to disable automatic log-scaling of graphs.
 
 2013-03-27: Add -z option to start y-axis at zero.
